--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body {
   margin-top: 25px;
   width: 338px;
   height: 520px;
-  background-color: #faf7f9;
+  background-color: #50504e8c;
   border: 1px solid var(--card-border-color);
   border-radius: 25px;
   text-align: center;
